<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.mantraapp.EmotionActivity">

    <TextView
        android:id="@+id/mantraTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/alata"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="302dp"
        android:layout_height="402dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/emotionPic"
        app:layout_constraintBottom_toTopOf="@+id/getCameraImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toLeftOf="@+id/getImage"
        app:layout_constraintRight_toRightOf="@+id/getCameraImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:src="@drawable/circle" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/circleGif"
        android:layout_width="302dp"
        android:layout_height="402dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        tools:src="@drawable/circle" />

    <Button
        android:id="@+id/getImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="68dp"
        android:onClick="getImage"
        android:text="@string/get_image"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/getCameraImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="68dp"
        android:onClick="getCameraImage"
        android:text="@string/take_image"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/getEmotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:onClick="getEmotion"
        android:text="@string/get_emotion"
        app:layout_constraintLeft_toLeftOf="@+id/getImage"
        app:layout_constraintRight_toRightOf="@+id/getCameraImage"
        app:layout_constraintTop_toBottomOf="@+id/getCameraImage"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:text=""
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintLeft_toLeftOf="@+id/getImage"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:text="@string/resultTitle"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultText"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/learnMoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/what_s_your_mantraBtn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />
</androidx.constraintlayout.widget.ConstraintLayout>